kubernetes/apps/blog/talos-and-tensors/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: talos-and-tensors
  labels:
    app.kubernetes.io/name: talos-and-tensors
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: talos-and-tensors
